--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -1,25 +1,22 @@
-name: Repo Sync
+# File: .github/workflows/repo-sync.yml
 
 on:
-  schedule: 
-  - cron: "*/15 * * * *" # every 15 minutes. set to whatever interval you like
+  schedule:
+  - cron:  "*/5 * * * *"
+  workflow_dispatch:
 
 jobs:
   repo-sync:
-    name: Repo Sync
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: repo-sync/github-sync@v2
-      name: Sync repo to branch
+    - uses: actions/checkout@v2
+      with:
+        persist-credentials: false
+    - name: repo-sync
+      uses: repo-sync/github-sync@v2
       with:
         source_repo: ${{ secrets.SOURCE_REPO }}
-        source_branch: master
-        destination_branch: ${{ secrets.INTERMEDIATE_BRANCH }}
-        github_token: ${{ secrets.GH_PAT }}
-    - uses: repo-sync/pull-request@v2
-      name: Create pull request
-      with:
         source_branch: ${{ secrets.INTERMEDIATE_BRANCH }}
-        destination_branch: master
-        github_token: ${{ secrets.GH_PAT }}
+        destination_branch: "*"
+        github_token: ${{ secrets.PAT }}
+        sync_tags: "true"
